# elodie_rs

./: Cargo.toml  README.md
src/: elodie.rs  exiftool.rs  main.rs
