[package]
name = "elodie_rs"
version = "0.1.0"
authors = ["Patrick Wozniak <email@patwoz.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.9.1"
serde_json = "1.0"
rayon = "1.1"
clap = "2.33.1"
dirs = "3.0.1"
lazy_static = "1.4.0"
walkdir = "2.3.1"
